# FTorch-workshop

./: .gitignore  README.md  _basic_coupling.qmd  _case_studies.qmd  _further_details.qmd  _how_it_works.qmd  _installing.qmd  _motivation.qmd  _preparation.qmd  _resnet_exercise.qmd  build_FTorch.sh  custom.scss  fortitude.toml  ftorch_workshop_slides.qmd  index.html  pyproject.toml  requirements_dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy_slides.yml  static_analysis.yml
exercises/exercise_00/: CMakeLists.txt  README.md  hello_fortran.f90  hello_pytorch.py  math_mod.f90  pytorch_net.py
exercises/exercise_01/: CMakeLists.txt  Makefile  README.md  pt2ts.py  simplenet.py  simplenet_fortran.f90  simplenet_fortran_sol.f90
exercises/exercise_02/: CMakeLists.txt  README.md  generate_input_batch.py  pt2ts.py  resnet18.py  resnet_infer_fortran.f90  resnet_infer_fortran_sol.f90  resnet_infer_python.py
exercises/exercise_02/bad/: Makefile  fortran_ml_mod.f90
exercises/exercise_02/good/: fortran_ml_mod.f90  pt2ts.py  simplenet_fortran.f90
exercises/exercise_03/: CMakeLists.txt  README.md  autograd.f90  autograd.py  simplenet.py
exercises/exercise_03/bad/: fortran_ml_mod.f90
exercises/exercise_04/: README.md  autograd.f90  autograd.py
slides/: _basic_coupling.qmd  _case_studies.qmd  _exercise_0.qmd  _further_details.qmd  _how_it_works.qmd  _installing.qmd  _learning_objectives.qmd  _motivation.qmd  _preparation.qmd  _resnet_exercise.qmd  ftorch_workshop_slides.qmd  references.bib
